--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -17,7 +17,7 @@
 </div>
 
 <button onclick="vaciarCarrito('{{cartId}}')" class="btn btn-danger">Vaciar Carrito</button>
-<h3 class="mt-2">Total de la compra: ${{totalCompra}}</h3>
+<h3 class="mt-2">Total de la compra: ${{totalPurchase}}</h3>
 
 <form method="post" action="/api/carts/{{cartId}}/purchase">
     <button type="submit" class="btn btn-success">Finalizar Compra</button>
